More ports from 2.8.
git-svn-id: http://chianti.ucsd.edu/svn@22876 0ecc0d97-ab19-0410-9704-bfe1a75892f5